[package]
name = "todoo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
# axum = "0.6.1"``  
# axum = "0.5"
hyper = { version = "0.14.23", features = ["full"]}
tokio = { version = "1.23.0", features = ["full"]}
tower = "0.4.13"
mime = "0.3.16"
serde = { version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.68"
thiserror = "1.0.38"
